legend-pure-parser/examples/errors/03_bad_multiplicity.pure
###Pure

// ERROR: Invalid multiplicity syntax
Class model::errors::BadMultiplicity
{
  name: String[abc];
  items: Integer[1..];
}
